// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Badge /> (Rectangle) renders solid information(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(22, 47, 86, 1.0)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="information"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      INFORMATION
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders solid negative(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(209, 45, 45, 1.0)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="negative"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEGATIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders solid neutral(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="neutral"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="primary.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(11, 112, 231, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEUTRAL
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders solid positive(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(31, 137, 14, 1.0)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="positive"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      POSITIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders solid warning(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(205, 130, 20, 1.0)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="warning"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      WARNING
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders subtle information(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="information"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="shade.980"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      INFORMATION
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders subtle negative(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(209, 45, 45, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="negative"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="negative.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(209, 45, 45, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEGATIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders subtle neutral(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="neutral"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="primary.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(11, 112, 231, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEUTRAL
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders subtle positive(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(31, 137, 14, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="positive"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="positive.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(31, 137, 14, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      POSITIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Rectangle) renders subtle warning(rectangle) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="rectangle"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(205, 130, 20, 0.10)",
          "borderRadius": 2,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 16,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="warning"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="neutral.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(205, 130, 20, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      WARNING
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders solid information(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(22, 47, 86, 1.0)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="information"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      INFORMATION
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders solid negative(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(209, 45, 45, 1.0)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="negative"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEGATIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders solid neutral(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="neutral"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="primary.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(11, 112, 231, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEUTRAL
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders solid positive(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(31, 137, 14, 1.0)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="positive"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      POSITIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders solid warning(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="solid"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(205, 130, 20, 1.0)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="warning"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="light.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      WARNING
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders subtle information(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="information"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="shade.980"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      INFORMATION
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders subtle negative(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(209, 45, 45, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="negative"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="negative.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(209, 45, 45, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEGATIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders subtle neutral(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="neutral"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="primary.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(11, 112, 231, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      NEUTRAL
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders subtle positive(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(31, 137, 14, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="positive"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="positive.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(31, 137, 14, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      POSITIVE
    </Text>
  </View>
</View>
`;

exports[`Renders <Badge /> (Stadium) renders subtle warning(Stadium) <Badge /> 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    fill="subtle"
    shape="stadium"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(205, 130, 20, 0.10)",
          "borderRadius": 10,
        },
        Array [
          Object {
            "paddingBottom": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 0,
          },
          Array [
            Object {
              "height": 20,
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "column",
                "justifyContent": "center",
              },
            ],
          ],
        ],
      ]
    }
    variant="warning"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="medium"
      align="left"
      color="neutral.900"
      size="xxsmall"
      style={
        Array [
          Object {
            "color": "rgba(205, 130, 20, 1.0)",
            "fontFamily": "Lato-Bold",
            "fontSize": 10,
            "letterSpacing": 0.5,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="bold"
    >
      WARNING
    </Text>
  </View>
</View>
`;
